--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,18 @@ services:
     ports:
       - "8000:8000"
 
-
-
+  db:
+    image: postgres:17-alpine
+    container_name: legal_advisor_db
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
 volumes:
   db_data:
