Implement a simple Streamlit interface

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
+# OpenAI Variables
 OPENAI_API_KEY=you_api_key_here
+
+# PostgreSQL Variables
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB=your_database_name
+
+# FASTAPI url used in the frontend
+FASTAPI_URL=http://backend:8000
