Add instructions for local and docker desktop setup

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 OPENAI_API_KEY=you_api_key_here
 
 # PostgreSQL Variables
-POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password
-POSTGRES_DB=your_database_name
+POSTGRES_USER=your_username # use postgres if using docker
+POSTGRES_PASSWORD=your_password # use postgres if using docker
+POSTGRES_DB=your_database_name # use legal_advisor_db if using docker
+POSTGRES_HOST=localhost # use db if using docker
 
-# FASTAPI url used in the frontend
-FASTAPI_URL=http://backend:8000
+# FASTAPI url used in the frontend (use http://localhost:8000 if using docker)
+FASTAPI_URL=http://localhost:8000
