Add instructions for local and docker desktop setup

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ POSTGRES_PASSWORD=your_password # use postgres if using docker
 POSTGRES_DB=your_database_name # use legal_advisor_db if using docker
 POSTGRES_HOST=localhost # use db if using docker
 
-# FASTAPI url used in the frontend (use http://localhost:8000 if using docker)
+# FASTAPI url used in the frontend (use http://backend:8000 if using docker)
 FASTAPI_URL=http://localhost:8000
