--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -12,7 +12,8 @@ pandas==2.2.3
 pillow==11.1.0 
 protobuf==5.29.4 
 pyarrow==19.0.1 
-pydeck==0.9.1 
+pydeck==0.9.1
+python-dotenv==1.0.1
 python-dateutil==2.9.0.post0 
 pytz==2025.1 
 referencing==0.36.2 
